; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/pthread/extr_pthread_shims.c_uthread_is_cancelled.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/pthread/extr_pthread_shims.c_uthread_is_cancelled.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.uthread = type { i32 }

@UT_CANCELDISABLE = common dso_local global i32 0, align 4
@UT_CANCEL = common dso_local global i32 0, align 4
@UT_CANCELED = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.uthread*)* @uthread_is_cancelled to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @uthread_is_cancelled(%struct.uthread* %0) #0 {
  %2 = alloca %struct.uthread*, align 8
  store %struct.uthread* %0, %struct.uthread** %2, align 8
  %3 = load %struct.uthread*, %struct.uthread** %2, align 8
  %4 = getelementptr inbounds %struct.uthread, %struct.uthread* %3, i32 0, i32 0
  %5 = load i32, i32* %4, align 4
  %6 = load i32, i32* @UT_CANCELDISABLE, align 4
  %7 = load i32, i32* @UT_CANCEL, align 4
  %8 = or i32 %6, %7
  %9 = load i32, i32* @UT_CANCELED, align 4
  %10 = or i32 %8, %9
  %11 = and i32 %5, %10
  %12 = load i32, i32* @UT_CANCEL, align 4
  %13 = icmp eq i32 %11, %12
  %14 = zext i1 %13 to i32
  ret i32 %14
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
